@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

hide circle
hide methods

title Domain Model Excerpt - US01

class User {
    - fullName
    - email
    - password
}

class RegistrationRequest {
    - fullName
    - email
    - password
    - identificationDocument
    - status
    - submissionDate
}

enum Status {
    PENDING
    APPROVED
    REJECTED
}

enum Role {
    POLITICAL_AGENT
    ORDINARY_CITIZEN
    JOURNALIST
    ETHICS_COMMITTEE
    SYSTEM_ADMINISTRATOR
}

User "0..1" -- "1" Role : has >
RegistrationRequest "1" -- "1" Role : requests >
RegistrationRequest "1" -- "1" Status : has >
RegistrationRequest ..> User : results in >

@enduml
